raffia/tests/error/scss/at-rule/include/missing-using.snap
---
source: raffia/tests/error.rs
---
error: expect token `;`, but found `(`
  ┌─ missing-using.scss:1:18
  │
1 │ @include mixin() () {}
  │                  ^


